2001-10-29  NIIBE Yutaka  <gniibe@m17n.org>

	* config.bfd: Supports sh3/sh4/sh3eb/sh4eb-unknown-linux-gnu
	targets.

2001-10-31  Nick Clifton  <nickc@cambridge.redhat.com>

	* targets.c: Fix typo: bfd_mmo_mmix_vec => bfd_mmo_vec.

2001-10-30  Hans-Peter Nilsson  <hp@bitrange.com>

	* Makefile.am (ALL_MACHINES): Add cpu-mmix.lo.
	(BFD64_BACKENDS): Add elf64-mmix.lo and mmo.lo.
	(BFD64_BACKENDS_CFILES): Add elf64-mmix.c and mmo.c.
	Regenerate dependencies.
	* configure.in (bfd_elf64_mmix_vec, bfd_mmo_vec): New vectors.
	* config.bfd: [BFD64] (mmix-*-*): New case.
	* cpu-mmix.c, mmo.c, elf64-mmix.c: New files.
	* archures.c (enum bfd_architecture): Add bfd_arch_mmix.
	(bfd_mmix_arch): Declare.
	(bfd_archures_list): Add bfd_mmix_arch.
	* targets.c (enum bfd_flavour): Add bfd_target_mmo_flavour.
	(bfd_elf64_mmix_vec, bfd_mmo_vec): Declare.
	(bfd_target_vect) [BFD64]: Add bfd_elf64_mmix_vec and
	bfd_mmo_mmix_vec.
	* reloc.c: Add MMIX relocations.
	* bfd.c (struct _bfd, tdata): Add mmo_data.
	* Makefile.in: Regenerate.
	* configure: Regenerate.
	* libbfd.h: Regenerate.
	* bfd-in2.h: Regenerate.
	* configure: Rebuild.

2001-10-30  Richard Earnshaw (rearnsha@arm.com)

	* elf.c (_bfd_elf_make_section_from_shdr): Set the LMA based on the
	p_paddr of the segment that contains it.
	(copy_private_bfd_data): If the LMA for a segment is known, use it
	for matching sections to segments.
	(assign_file_positions_for_segments): Use the LMA when adjusting
	for inter-section alignment padding.

2001-10-29  Kazu Hirata  <kazu@hxi.com>

	* README: Fix a typo.

2001-10-24  Richard Henderson  <rth@redhat.com>

	* peXXigen.c (_bfd_XX_print_private_bfd_data_common): Copy
	timestamp to time_t for ctime.

2001-10-24  Hans-Peter Nilsson  <hp@axis.com>

	* elf32-cris.c (cris_reloc_type_lookup): Change loop to use
	unsigned, increasing index.

2001-10-23  H.J. Lu <hjl@gnu.org>

	* elf32-mips.c (_bfd_mips_elf_modify_segment_map): Check
	m != NULL before accessing it.
