@@ -1,3 +1,8 @@
+2001-11-01  Alan Modra  <amodra@bigpond.net.au>
+
+	* elf32-hppa.c (elf32_hppa_size_dynamic_sections): Set DT_RELASZ
+	whenever DT_PLTRELSZ.
+
 2001-10-29  NIIBE Yutaka  <gniibe@m17n.org>
 
 	* config.bfd: Supports sh3/sh4/sh3eb/sh4eb-unknown-linux-gnu
